inou/prp/tests/errors/overflow_func.prp
/*
:name: overflow_func
:type: error
:error: does not fit
*/

// An overflow inside a (comptime-inlined) comb function: the local accumulator
// is typed s4, but 7 + 7 = 14 exceeds s4 [-8, 7]. Functions are inlined before
// bitwidth, so after inlining + folding upass.bitwidth tracks the accumulator's
// concrete range and reports the overflow.

comb step() -> (r:s4) {
  mut acc:s4 = 7
  acc = acc + 7
  r = acc
}

mut o:s4 = step()
